--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Sistema de Cadastro de Jogadores</h1>
+    <p>Este sistema permite o cadastro de jogadores e times para eSports.</p>
+
+    <img src="https://www.kindpng.com/picc/m/717-7178642_transparent-esports-logo-png-logo-esports-png-png.png" alt="eSports Logo" />
+
 </div>
