--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,6 +6,6 @@
     <h1 class="display-4">Sistema de Cadastro de Jogadores</h1>
     <p>Este sistema permite o cadastro de jogadores e times para eSports.</p>
 
-    <img src="https://www.kindpng.com/picc/m/717-7178642_transparent-esports-logo-png-logo-esports-png-png.png" alt="eSports Logo" />
+    <img height="250px" src="https://www.kindpng.com/picc/m/717-7178642_transparent-esports-logo-png-logo-esports-png-png.png" alt="eSports Logo" />
 
 </div>
