--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,8 +21,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>  <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area=""  asp-controller="Equipe" asp-action="Index"
->Cadastro de Equipes</a>
+                            <a class="nav-link text-dark" asp-area=""  asp-controller="Equipe" asp-action="Index">Equipes</a>
                         </li></li>  <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Equipe">Cadastro de Jogadores</a>
                         </li>
