--- a/Views/Equipe/Index.cshtml
+++ b/Views/Equipe/Index.cshtml
@@ -30,7 +30,7 @@
             <tr>
                 <td>@e.IdEquipe</td>
                 <td>@e.Nome</td>
-                <td>@e.Imagem</td>
+                <td><img height="100" src="@e.Imagem" alt="@e.Nome" /></td>
             </tr>
         }
     </tbody>
